# aws-iot-framework-for-agl

./: .gitmodules  CONTRIBUTING.md  NOTICE  NOTICE.txt  README.md
deployment/: build-wgt.sh
source/aws-iot-binding/: CMakeLists.txt
source/aws-iot-binding/aws-iot-afb/: CMakeLists.txt
source/aws-iot-binding/aws-iot-afb/binding/: application.cpp  application.hpp  aws-gg-pubsub.cpp  aws-gg-pubsub.hpp  aws-iot-cb.cpp  aws-iot-hat.cpp  aws-iot-hat.hpp
source/aws-iot-binding/conf.d/cmake/: config.cmake
source/aws-iot-binding/conf.d/wgt/: config.xml.in
source/aws-iot-binding/data/: CMakeLists.txt
source/aws-iot-binding/data/certs/: README.txt
source/aws-iot-binding/data/config/: config.json
